--- a/customers.html
+++ b/customers.html
@@ -215,7 +215,7 @@
         </div>
         <div class="customer-card-grid grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-2 2xl:gap-3 mt-3"
             id="customer-grid-view">
-            <div class="customer-card bg-[#fafafa] p-3 2xl:p-5 rounded max-w-xs flex flex-col gap-4 relative">
+            <div class="customer-card bg-[#fafafa] p-3 2xl:p-5 rounded flex flex-col gap-4 relative">
                 <div class="customer-card-head flex items-center gap-3">
                     <div class="bg-white w-12 h-12 rounded-full p-2 overflow-hidden">
                         <img src="/assets/images/google-logo.svg" alt="">
@@ -270,7 +270,7 @@
                     </div>
                 </div>
             </div>
-            <div class="customer-card bg-[#fafafa] p-3 2xl:p-5 rounded max-w-xs flex flex-col gap-4 relative">
+            <div class="customer-card bg-[#fafafa] p-3 2xl:p-5 rounded flex flex-col gap-4 relative">
                 <div class="customer-card-head flex items-center gap-3">
                     <div class="bg-white w-12 h-12 rounded-full p-2 overflow-hidden">
                         <img src="./assets/images/google-logo.svg" alt="">
@@ -438,6 +438,11 @@
                                                         d="M13 3a1 1 0 0 1 .117 1.993L13 5H5v14h14v-8a1 1 0 0 1 1.993-.117L21 11v8a2 2 0 0 1-1.85 1.995L19 21H5a2 2 0 0 1-1.995-1.85L3 19V5a2 2 0 0 1 1.85-1.995L5 3h8Zm6.243.343a1 1 0 0 1 1.497 1.32l-.083.095l-9.9 9.899a1 1 0 0 1-1.497-1.32l.083-.094l9.9-9.9Z" />
                                                 </g>
                                             </svg>
+                                        </button>
+                                        <button type="button"
+                                            class="inline-flex flex-shrink-0 justify-center items-center gap-2 h-6 w-6 rounded-md border border-transparent font-medium bg-white text-gray-700 shadow-sm align-middle hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 focus:ring-offset-white transition-all text-xs"
+                                            href="#">
+                                            <svg class="w-5 h-5 text-gray-800 hover:text-emerald-500" xmlns="http://www.w3.org/2000/svg" width="1024" height="1024" viewBox="0 0 1024 1024"><path fill="currentColor" d="M360 184h-8c4.4 0 8-3.6 8-8v8h304v-8c0 4.4 3.6 8 8 8h-8v72h72v-80c0-35.3-28.7-64-64-64H352c-35.3 0-64 28.7-64 64v80h72v-72zm504 72H160c-17.7 0-32 14.3-32 32v32c0 4.4 3.6 8 8 8h60.4l24.7 523c1.6 34.1 29.8 61 63.9 61h454c34.2 0 62.3-26.8 63.9-61l24.7-523H888c4.4 0 8-3.6 8-8v-32c0-17.7-14.3-32-32-32zM731.3 840H292.7l-24.2-512h487l-24.2 512z"/></svg>
                                         </button>
                                     </td>
                                 </tr>
