--- a/project-detailed-view.html
+++ b/project-detailed-view.html
@@ -196,10 +196,10 @@
             </div>
         </div>
     </div>
-    <div class="main overflow-y-auto flex flex-col">
+    <div class="main overflow-hidden flex flex-col">
         <div class="flex -my-4 -mx-4 flex-1">
-            <div class="border-r pt-2 flex flex-col w-48 h-[calc(100vh-3.5rem)]">
-                <div class="flex items-center gap-3 px-2 mb-3">
+            <div class="border-r pt-2 flex-col hidden lg:flex w-64 h-[calc(100vh-3.5rem)]">
+                <div class="flex items-center justify-between gap-3 px-2 mb-3">
                     <span class="text-sm font-bold">All Projects</span>
                     <button type="button"
                         class="py-2 px-2 inline-flex justify-center items-center gap-1 rounded-md border border-transparent bg-[#00cc83] text-white hover:bg-emerald-600 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2 transition-all text-xs sm:sm">
@@ -266,9 +266,9 @@
                     
                 </div>
             </div>
-            <div class="flex-1 p-3 overflow-x-hidden">
+            <div class="flex-1 p-3 pb-10 overflow-x-hidden h-[calc(100vh-3.5rem)] overflow-y-auto">
                 <div class="flex items-stretch overflow-x-auto border-y -ml-4 -mr-4 -mt-4 mb-4">
-                    <div class="flex items-center gap-2 px-4 border-r py-2">
+                    <div class="flex flex-wrap items-center gap-2 px-4 border-r py-2">
                         <img class="w-5 h-5 rounded-full" src="./assets/images/google-logo.svg" alt="">
                         <div>
                             <p>Customer</p>
