--- a/new-customers.html
+++ b/new-customers.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="sidebar fixed left-0 top-0 h-screen w-52 xl:w-64 2xl:w-96 bg-[#f9f9f9] pl-4 xl:pl-10 2xl:pl-14 py-3 xl:py-4 2xl:py-5 pr-4 xl:pr-8 2xl:pr-10 flex flex-col z-30">
+    <!-- <div class="sidebar fixed left-0 top-0 h-screen w-52 xl:w-64 2xl:w-96 bg-[#f9f9f9] pl-4 xl:pl-10 2xl:pl-14 py-3 xl:py-4 2xl:py-5 pr-4 xl:pr-8 2xl:pr-10 flex flex-col z-30">
         <div class="logo mb-4 lg:mb-6 xl-mb-8 2xl:mb-10">
             <img class="h-10 md:h-12 lg:h-14 xl:h-16 2xl:h-20 w-auto" src="./assets/images/logo.svg" alt="">
         </div>
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="main overflow-y-auto">
         <div class="flex items-center justify-between mb-5">
             <div>
@@ -286,13 +286,13 @@
                     <!-- <div class="multipart-indicator py-2 px-4">Contact Persons</div> -->
                 </div>
                 <div class="multipart-form-wrapper mt-4">
-                    <div class="multipart-form active w-full max-w-2xl">
+                    <div class="multipart-form active w-full max-w-2xl flex-col">
                         <div class="grid grid-cols-1 sm:grid-cols-3 gap-3">
                             <div>
                                 <span class="mb-2 font-medium block text-sm 2xl:text-base">PAN</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <input type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number">
                                 </div>
                             </div>
@@ -300,7 +300,7 @@
                                 <span class="mb-2 font-medium block text-sm 2xl:text-base">Currency</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <select type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number"></select>
                                 </div>
                             </div>
@@ -308,7 +308,7 @@
                                 <span class="mb-2 font-medium block text-sm 2xl:text-base">GST No.</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <input type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number">
                                 </div>
                             </div>
@@ -316,7 +316,7 @@
                                 <span class="mb-2 font-medium block text-sm 2xl:text-base">Payment Terms</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <select type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number"></select>
                                 </div>
                             </div>
@@ -325,13 +325,13 @@
                             Next
                         </button>
                     </div>
-                    <div class="multipart-form w-full max-w-2xl">
-                        <div class="grid grid-cols-1 sm:grid-cols-3 mb-4 gap-4">
+                    <div class="multipart-form w-full max-w-2xl flex-col">
+                        <div class="grid grid-cols-1 sm:grid-cols-4 mb-4 gap-4">
                             <div>
                                 <span class="mb-2 font-medium block">Country/Region</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <input type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number">
                                 </div>
                             </div>
@@ -347,7 +347,7 @@
                                 <span class="mb-2 font-medium block">State</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <input type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number">
                                 </div>
                             </div>
@@ -355,20 +355,20 @@
                                 <span class="mb-2 font-medium block">Zipcode</span>
                                 <div class="flex items-center gap-3 flex-wrap">
                                     <select type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Enter PAN Number"></select>
                                 </div>
                             </div>
-                            <div>
+                            <div class="col-span-1 sm:col-span-2">
                                 <span class="mb-2 font-medium block">Address</span>
                                 <div class="flex items-center gap-3 flex-wrap mb-4">
                                     <input type="text"
-                                    class="py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
+                                    class="w-full py-3 px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                     placeholder="Address Line 1">
                                 </div>
                             </div>
-                            <div class="">
-                                <span class="mb-2 font-medium block text-transparent">Address</span>
+                            <div class="col-span-1 sm:col-span-2">
+                                <span class="mb-2 font-medium text-transparent hidden sm:block">Address</span>
                                 <input type="text"
                                 class="py-3 w-full px-4 block flex-1 border-gray-200 rounded-md text-xs 2xl:text-sm focus:border-emerald-500 focus:ring-emerald-500"
                                 placeholder="Address Line 2">
