--- a/datatable-with-card.html
+++ b/datatable-with-card.html
@@ -225,7 +225,7 @@
     <div class="main overflow-y-auto">
         <div class="flex justify-end items-center">
             <nav class="flex items-center border rounded">
-                <button onclick="switchView('list')" type="button"
+                <button title="List View" onclick="switchView('list')" type="button"
                     class="switch-view hs-tab-active:font-semibold p-2 inline-flex items-center gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500 hover:text-emerald-600 active"
                     id="customers-list-view-btn">
                     <svg class="w-4 h-4 2xl:w-5 2xl:h-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -234,7 +234,7 @@
                             d="M4 13c.55 0 1-.45 1-1s-.45-1-1-1s-1 .45-1 1s.45 1 1 1zm0 4c.55 0 1-.45 1-1s-.45-1-1-1s-1 .45-1 1s.45 1 1 1zm0-8c.55 0 1-.45 1-1s-.45-1-1-1s-1 .45-1 1s.45 1 1 1zm4 4h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zm0 4h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zM7 8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1zm-3 5c.55 0 1-.45 1-1s-.45-1-1-1s-1 .45-1 1s.45 1 1 1zm0 4c.55 0 1-.45 1-1s-.45-1-1-1s-1 .45-1 1s.45 1 1 1zm0-8c.55 0 1-.45 1-1s-.45-1-1-1s-1 .45-1 1s.45 1 1 1zm4 4h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zm0 4h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1s.45 1 1 1zM7 8c0 .55.45 1 1 1h12c.55 0 1-.45 1-1s-.45-1-1-1H8c-.55 0-1 .45-1 1z" />
                     </svg>
                 </button>
-                <button onclick="switchView('grid')" type="button"
+                <button title="Card View" onclick="switchView('grid')" type="button"
                     class="switch-view hs-tab-active:font-semibold p-2 inline-flex items-center gap-2 border-b-[3px] border-transparent text-sm whitespace-nowrap text-gray-500 hover:text-emerald-600"
                     id="customers-grid-view-btn">
                     <svg class="w-4 h-4 2xl:w-5 2xl:h-5" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
