--- a/loading.html
+++ b/loading.html
@@ -924,8 +924,8 @@
     </div>
 
     <!-- Loader Start-->
-    <div class="loader_wrapper fixed h-screen w-screen bg-black/30 z-[9999] left-0 top-0 flex items-center justify-center">
-        <div class="loader_container bg-white/50 rounded-xl flex items-center justify-center w-20 h-20 backdrop-blur-sm">
+    <div style="display: none;" id="loader" class="loader_wrapper fixed h-screen w-screen bg-black/30 z-[9999] left-0 top-0">
+        <div class="loader_container bg-white/50 rounded-xl flex items-center justify-center w-20 h-20 backdrop-blur-sm absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2">
             <div class="animate-spin inline-block w-8 h-8 border-[4px] border-current border-t-transparent text-emerald-400 rounded-full"
                 role="status" aria-label="loading">
                 <span class="sr-only">Loading...</span>
@@ -934,6 +934,8 @@
     </div>
     <!-- Loader End -->
     <script src="./assets/js/preline.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
     <script>
         function toggleSidebarSize() {
             document.querySelector(".sidebar").classList.toggle("shrinked");
