--- a/oaf.html
+++ b/oaf.html
@@ -283,21 +283,21 @@
                                     </div>
                                     <div class="flex items-center gap-4">
                                         <div>
-                                            <input type="file" class="hidden" name="" id="email&messages" onchange="handleFileChange(this, 1);">
-                                            <label for="email&messages" class="underline">Email & Messages</label>
+                                            <input type="file" class="hidden" name="" id="emailmessages" onchange="handleFileChange(this, '1');">
+                                            <label for="emailmessages" class="underline">Email & Messages</label>
                                         </div>
                                         <div>
-                                            <input type="file" class="hidden" name="" id="proposal">
+                                            <input type="file" class="hidden" name="" id="proposal" onchange="handleFileChange(this, '2');">
                                             <label for="proposal" class="underline">Attach Proposal</label>
                                         </div>
                                         <div>
-                                            <input type="file" class="hidden" name="" id="po">
+                                            <input type="file" class="hidden" name="" id="po" onchange="handleFileChange(this, '3');">
                                             <label for="po" class="underline">Attach PO</label>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="flex items-center gap-4 flex-wrap">
-                                    <div class="relative group">
+                                <div class="attachments-wrapper flex items-center gap-4 flex-wrap">
+                                    <!-- <div class="relative group">
                                         <p class="text-blue-500 underline cursor-pointer" onclick="showPreview();">Email/Messages</p>
                                         <button onclick="removeFile(1);" class="p-1 absolute right-0 top-0 rounded-full bg-black hover:bg-red-600 translate-x-[50%] translate-y-[-50%] hidden group-hover:block">
                                             <svg class="w-3 h-3 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6L6.4 19Z"/></svg>
@@ -314,7 +314,7 @@
                                         <button onclick="removeFile(2);" class="p-1 absolute right-0 top-0 rounded-full bg-black hover:bg-red-600 translate-x-[50%] translate-y-[-50%] hidden group-hover:block">
                                             <svg class="w-3 h-3 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6L6.4 19Z"/></svg>
                                         </button>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="mb-2">
@@ -671,6 +671,29 @@
 
         </form>
     </div>
+
+    <div id="filePreviewModal" class="hs-overlay hidden w-full h-full fixed top-0 start-0 z-[60] overflow-x-hidden overflow-y-auto">
+        <div class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all sm:max-w-4xl sm:w-full m-3 sm:mx-auto h-[calc(100%-3.5rem)]">
+          <div class="max-h-full overflow-hidden flex flex-col bg-white border shadow-sm rounded-xl pointer-events-auto">
+            <div class="flex justify-between items-center py-3 px-4 border-b">
+              <h3 class="font-bold">
+                File Preview
+              </h3>
+              <button type="button" class="flex justify-center items-center w-7 h-7 text-sm font-semibold rounded-full border border-transparent hover:bg-gray-100 disabled:opacity-50 disabled:pointer-events-none" data-hs-overlay="#filePreviewModal">
+                <span class="sr-only">Close</span>
+                <svg class="flex-shrink-0 w-4 h-4" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M18 6 6 18"/><path d="m6 6 12 12"/></svg>
+              </button>
+            </div>
+            <div class="p-4 overflow-y-auto">
+              <div class="space-y-4">
+                <div id="filePreviewWrapper">
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     <div id="costing-sheet-modal"
         class="hs-overlay hidden w-full h-full fixed top-0 left-0 z-[60] overflow-x-hidden overflow-y-auto">
@@ -1156,13 +1179,75 @@
         $("#summernote").summernote();
 
         function handleFileChange(input, type) {
+            let html = `<div class="relative group">`;
             if(type === '1') {
-
+                html += `<p onclick="showPreview('1');" class="text-blue-500 underline cursor-pointer" onclick="showPreview();">Email/Messages</p>`;
+            } else if(type === '2') {
+                html += `<p onclick="showPreview('2');" class="text-blue-500 underline cursor-pointer" onclick="showPreview();">Proposal</p>`;
+            } else if(type === '3') {
+                html += `<p onclick="showPreview('3');" class="text-blue-500 underline cursor-pointer" onclick="showPreview();">PO</p>`;
             }
+            html += `<button type="button" onclick="removeFile(this, '${type}');" class="p-1 absolute right-0 top-0 rounded-full bg-black hover:bg-red-600 translate-x-[50%] translate-y-[-50%] hidden group-hover:block">
+                        <svg class="w-3 h-3 text-white" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6.4 19L5 17.6l5.6-5.6L5 6.4L6.4 5l5.6 5.6L17.6 5L19 6.4L13.4 12l5.6 5.6l-1.4 1.4l-5.6-5.6L6.4 19Z"/></svg>
+                    </button>
+                </div>`;
+
+            if(document.querySelector(`[onclick="showPreview('${type}');"]`)) {
+                document.querySelector(`[onclick="showPreview('${type}');"]`).parentElement.remove();
+            }
+
+            document.querySelector(".attachments-wrapper").innerHTML += html;
+            
         }
 
-        function removeFile(fileInput) {
-            
+        function removeFile(btn, fileInput) {
+            console.log(fileInput, fileInput === '1');
+            if(fileInput === '1') {
+                const fileInput = document.querySelector("#emailmessages");
+                const parent = fileInput.parentElement;
+                fileInput.remove();
+                parent.innerHTML = `<input type="file" class="hidden" name="" id="emailmessages" onchange="handleFileChange(this, '1');">`+parent.innerHTML;
+            } else if(fileInput === '2') {
+                const fileInput = document.querySelector("#proposal");
+                const parent = fileInput.parentElement;
+                fileInput.remove();
+                parent.innerHTML = `<input type="file" class="hidden" name="" id="proposal" onchange="handleFileChange(this, '2');">`+parent.innerHTML;
+            } else if(fileInput === '3') {
+                const fileInput = document.querySelector("#po");
+                const parent = fileInput.parentElement;
+                fileInput.remove();
+                parent.innerHTML = `<input type="file" class="hidden" name="" id="po" onchange="handleFileChange(this, '3');">`+parent.innerHTML;
+            }
+            btn.parentElement.remove();
+        }
+
+        function showPreview(fileInput) {
+            if(fileInput === '1') {
+                const file = document.querySelector("#emailmessages").files[0];
+                setFilePreview(file);
+            } else if(fileInput === '2') {
+                const file = document.querySelector("#proposal").files[0];
+                setFilePreview(file);
+            } else if(fileInput === '3') {
+                const file = document.querySelector("#po").files[0];
+                setFilePreview(file);
+            }
+            HSOverlay.open(document.querySelector("#filePreviewModal"));
+        }
+
+        function setFilePreview(file) {
+            document.querySelector("#filePreviewWrapper").innerHTML = "";
+            let element;
+            if(file?.type.includes("image")) {
+                element = document.createElement("img");
+            } else if(file?.type.includes("pdf")) {
+                element = document.createElement("iframe");
+                element.style.height = "70vh";
+            }
+            element.src = URL.createObjectURL(file);
+                element.style.width = "100%";
+                element.style.maxWidth = "100%";
+                document.querySelector("#filePreviewWrapper").appendChild(element);
         }
     </script>
 </body>
