--- a/dh_submit_checklist.html
+++ b/dh_submit_checklist.html
@@ -254,9 +254,12 @@
                 <div class="dh-checklist-fill">
                     <div class="flex items-center gap-2 mb-2">
                         <div class="flex">
-                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4" checked>
-                          </div>
-                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                            <input type="checkbox"
+                                class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500"
+                                id="hs-checkbox-group-4" checked>
+                        </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective
+                            databases</span>
                     </div>
                     <div>
                         <p class="text-sm font-semibold text-gray-500">Reference Response</p>
@@ -275,9 +278,12 @@
                 <div class="dh-checklist-fill">
                     <div class="flex items-center gap-2 mb-2">
                         <div class="flex">
-                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
-                          </div>
-                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                            <input type="checkbox"
+                                class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500"
+                                id="hs-checkbox-group-4">
+                        </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective
+                            databases</span>
                     </div>
                     <div>
                         <p class="text-sm font-semibold text-gray-500">Reference Response</p>
@@ -296,9 +302,12 @@
                 <div class="dh-checklist-fill">
                     <div class="flex items-center gap-2 mb-2">
                         <div class="flex">
-                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
-                          </div>
-                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                            <input type="checkbox"
+                                class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500"
+                                id="hs-checkbox-group-4">
+                        </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective
+                            databases</span>
                     </div>
                     <div>
                         <p class="text-sm font-semibold text-gray-500">Reference Response</p>
@@ -319,9 +328,12 @@
                 <div class="dh-checklist-fill">
                     <div class="flex items-center gap-2 mb-2">
                         <div class="flex">
-                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
-                          </div>
-                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                            <input type="checkbox"
+                                class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500"
+                                id="hs-checkbox-group-4">
+                        </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective
+                            databases</span>
                     </div>
                     <div>
                         <p class="text-sm font-semibold text-gray-500">Reference Response</p>
@@ -340,9 +352,12 @@
                 <div class="dh-checklist-fill">
                     <div class="flex items-center gap-2 mb-2">
                         <div class="flex">
-                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
-                          </div>
-                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                            <input type="checkbox"
+                                class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500"
+                                id="hs-checkbox-group-4">
+                        </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective
+                            databases</span>
                     </div>
                     <div>
                         <p class="text-sm font-semibold text-gray-500">Reference Response</p>
@@ -361,9 +376,12 @@
                 <div class="dh-checklist-fill">
                     <div class="flex items-center gap-2 mb-2">
                         <div class="flex">
-                            <input type="checkbox" class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500" id="hs-checkbox-group-4">
-                          </div>
-                        <span class="font-bold block">1. ERP systems in use with their version and respective databases</span>
+                            <input type="checkbox"
+                                class="shrink-0 border-gray-200 rounded text-emerald-600 focus:ring-emerald-500"
+                                id="hs-checkbox-group-4">
+                        </div>
+                        <span class="font-bold block">1. ERP systems in use with their version and respective
+                            databases</span>
                     </div>
                     <div>
                         <p class="text-sm font-semibold text-gray-500">Reference Response</p>
@@ -382,7 +400,7 @@
             </div>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 mb-4">
-            
+
             <div class="">
                 <span class="mb-2 font-bold block">2. ERP systems in use with their version and respective
                     databases</span>
@@ -1012,8 +1030,7 @@
         class="hs-overlay hidden w-full h-full fixed top-0 left-0 z-[60] overflow-x-hidden overflow-y-auto">
         <div
             class="hs-overlay-open:mt-7 hs-overlay-open:opacity-100 hs-overlay-open:duration-500 mt-0 opacity-0 ease-out transition-all md:max-w-2xl md:w-full m-3 md:mx-auto">
-            <div
-                class="flex flex-col bg-white border shadow-sm rounded-xl ">
+            <div class="flex flex-col bg-white border shadow-sm rounded-xl ">
                 <div class="flex justify-between items-center py-3 px-4 ">
                     <h3 class="font-bold ">
                         <!-- Modal title -->
@@ -1034,10 +1051,10 @@
                     <img src="./assets/images/successful_submit.svg" class="w-11/12 max-w-[18rem] mx-auto mb-5" alt="">
                     <p class="mt-1 text-center text-gray-600 text-2xl">Contract</p>
                     <p class="text-center text-gray-700 font-bold text-4xl mb-4">Submitted Successfully</p>
-                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
     <div id="hs-assign-modal"
         class="hs-overlay hidden w-full h-full fixed top-0 left-0 z-[60] overflow-x-hidden overflow-y-auto">
