--- a/add-employee.html
+++ b/add-employee.html
@@ -220,7 +220,7 @@
                     <input type="text" class="k-input w-full">
                 </div>
                 <div>
-                    <label class="mb-1 text-sm" for="">Contract No.</label>
+                    <label class="mb-1 text-sm" for="">Contact No.</label>
                     <input type="text" class="k-input w-full">
                 </div>
                 <div>
