--- a/add-vendor.html
+++ b/add-vendor.html
@@ -202,7 +202,7 @@
                     <input type="text" class="k-input w-full">
                 </div>
                 <div>
-                    <label class="mb-1 text-sm" for="">Vendor Contract</label>
+                    <label class="mb-1 text-sm" for="">Vendor Contact</label>
                     <input type="text" class="k-input w-full">
                 </div>
                 <div>
